# Capital-Gamma

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  format.sh  requirements.txt
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  call_option.cpp  capgampy.cpp  instruments.cpp  payoff.cpp
include/capgam/: hello.hpp
include/capgam/common/: scoped_timer.h
include/capgam/core/: data_transformer.h  message_structs.h  order_router.h  ring_buffer.h  timeseries_db.h
include/capgam/engine/: mc_option_valuation.hpp
include/capgam/instruments/: option_info.hpp  payoffs.hpp
include/capgam/math/: primative_operators.hpp
include/capgam/models/: equity_price_generator.hpp
include/capgam/options/: option_info.hpp  payoffs.hpp
src/: hello.cpp  main.cpp
src/common/: scoped_timer.h
src/core/: data_transformer.h  message_structs.h  order_router.h  ring_buffer.h  timeseries_db.h
src/engine/: mc_option_valuation.cpp
src/instruments/: options_info.cpp  payoffs.cpp
src/math/: primative_operator.cpp
src/models/: equity_price_generator.cpp
src/options/: options_info.cpp  payoffs.cpp
test/: CMakeLists.txt  test_hello.cpp
test/basic/: CMakeLists.txt  test_hello.cpp
test/bindings/: call_option_test.py  instruments_test.py  option_payoff_test.py
test/engine/: CMakeLists.txt  mc_option_valuation_test.cpp
test/instruments/: CMakeLists.txt  test_option_info.cpp  test_payoffs.cpp
test/maths/: CMakeLists.txt  test_math.cpp
test/models/: CMakeLists.txt  equity_price_generator_test.cpp
test/options/: CMakeLists.txt  test_option_info.cpp  test_payoffs.cpp
